dev/css/components/molecules/state.less
.__moduleName__Configuration .stateBlock {

  min-height: 150px;

  .payplugUIAccordion {
    &_contentWrapper {
      width: 100%;
      padding: 0;
      border-radius: 4px;
    }
    &.-stateBlock {

      border: none;

      label {
        padding: 0;
        height: 0;
        margin: 0;
        &:after {
          position: relative;
          top: -60px;
          left: calc(100% - 30px);
          height: 12px;
          width: 18px;
          -webkit-mask-size: 35px;
          mask-size: 35px;
        }
      }

      ._stateAlert {
        display: none;
        font-size: 12px;
        &.-showAlert {
          display: block;
        }
      }

      ._stateContent {
        width: 100%;
        padding: 40px 40px 32px 40px;
        background-color: rgba(215,216,217,0.2);

        button {
          font-weight: 100;
          font-size: 12px;
          padding: 12px;
          width: 187px;
          height: 40px;
          background: transparent;
        }
        .indicators {
          display: flex;
          flex-direction: column;
          padding-top: 24px;
          .indicator {
            display: flex;
            flex-wrap: nowrap;
            padding: 10px 0;
            .closeClass > svg {
              fill: #colorMap[accentuationWarning500];
            }
            .checkClass > svg {
              fill: @color-primary;
            }
            p {
              padding: 3px 0 0 28px;
            }
          }
        }
      }
    }
  }
}

